--- a/config/sass/style1.scss
+++ b/config/sass/style1.scss
@@ -15,6 +15,11 @@ margin: $dim;
     text-align: center;
 
 }
+.mainh2{
+  color:$back ;
+  text-align: center;
+
+}
 
 .col-md-3{
    @include mainmargin(40px);
@@ -26,6 +31,9 @@ margin: $dim;
     background: -moz-linear-gradient(right, #b3ffb3, #279b5d);
     background: linear-gradient(to right, #b3ffb3, #279b5d);
     position: absolute;
+    -moz-box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
+    -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
   @media (max-width: 600px) {
     padding: 0px;
     margin-right: 1px;
